// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should render the error message 1`] = `
.c0 .c1,
.c0 .c3,
.c0 .c5 {
  color: #FF6347;
}

.c0 .c1 svg,
.c0 .c3 svg,
.c0 .c5 svg {
  color: #FF6347;
}

.c0 .c1::-webkit-input-placeholder,
.c0 .c3::-webkit-input-placeholder,
.c0 .c5::-webkit-input-placeholder {
  color: #FF6347;
}

.c0 .c1::-moz-placeholder,
.c0 .c3::-moz-placeholder,
.c0 .c5::-moz-placeholder {
  color: #FF6347;
}

.c0 .c1:-ms-input-placeholder,
.c0 .c3:-ms-input-placeholder,
.c0 .c5:-ms-input-placeholder {
  color: #FF6347;
}

.c0 .c1::placeholder,
.c0 .c3::placeholder,
.c0 .c5::placeholder {
  color: #FF6347;
}

.c0 .c3 {
  border-color: #FF6347;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1.4rem;
  color: #030517;
  cursor: pointer;
  padding-bottom: calc(0.8rem / 2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #EAEAEA;
  border-radius: 0.2rem;
  padding: 0 1.6rem;
  border: 0.2rem solid #EAEAEA;
}

.c4 svg {
  margin-right: 1.6rem;
}

.c4:focus-within {
  box-shadow: 0 0 0.5rem #F231A5;
}

.c6 {
  color: #030517;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-size: 1.6rem;
  padding: 0.8rem 0;
  background: transparent;
  border: 0;
  outline: none;
  width: 100%;
}

.c7 {
  color: #FF6347;
  font-size: 1.2rem;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="field"
  >
    label
  </label>
  <div
    class="c3 c4"
  >
    <input
      class="c5 c6"
      id="field"
      type="text"
      value=""
    />
  </div>
  <span
    class="c7"
  >
    Error message
  </span>
</div>
`

exports[`<TextField /> should render with disabled property 1`] = `
.c0 .c1,
.c0 .c3,
.c0 .c5 {
  cursor: not-allowed;
  color: #B5B5B5;
}

.c0 .c1 svg,
.c0 .c3 svg,
.c0 .c5 svg {
  color: #B5B5B5;
}

.c0 .c1::-webkit-input-placeholder,
.c0 .c3::-webkit-input-placeholder,
.c0 .c5::-webkit-input-placeholder {
  color: #B5B5B5;
}

.c0 .c1::-moz-placeholder,
.c0 .c3::-moz-placeholder,
.c0 .c5::-moz-placeholder {
  color: #B5B5B5;
}

.c0 .c1:-ms-input-placeholder,
.c0 .c3:-ms-input-placeholder,
.c0 .c5:-ms-input-placeholder {
  color: #B5B5B5;
}

.c0 .c1::placeholder,
.c0 .c3::placeholder,
.c0 .c5::placeholder {
  color: #B5B5B5;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1.4rem;
  color: #030517;
  cursor: pointer;
  padding-bottom: calc(0.8rem / 2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #EAEAEA;
  border-radius: 0.2rem;
  padding: 0 1.6rem;
  border: 0.2rem solid #EAEAEA;
}

.c4 svg {
  margin-right: 1.6rem;
}

.c4:focus-within {
  box-shadow: 0 0 0.5rem #F231A5;
}

.c6 {
  color: #030517;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-size: 1.6rem;
  padding: 0.8rem 0;
  background: transparent;
  border: 0;
  outline: none;
  width: 100%;
}

<div
  class="c0"
  disabled=""
>
  <label
    class="c1 c2"
    for="field"
  >
    label
  </label>
  <div
    class="c3 c4"
  >
    <input
      class="c5 c6"
      disabled=""
      id="field"
      type="text"
      value=""
    />
  </div>
</div>
`
